@@ -45,18 +45,8 @@ namespace C
             var project = solution.EnsureProjectExists(encapsulating);
             var config = project.GetConfiguration(encapsulating);
 
-            var output = objectFilePath.Parse();
-
-            var args = new Bam.Core.StringArray();
-            args.Add(CommandLineProcessor.Processor.StringifyTool(sender.Tool as Bam.Core.ICommandLineTool));
-            (sender.Settings as CommandLineProcessor.IConvertToCommandLine).Convert(args);
-            args.Add("%(FullPath)");
-
-            var customBuild = config.GetSettingsGroup(VSSolutionBuilder.VSSettingsGroup.ESettingsGroup.CustomBuild, include: sender.InputPath, uniqueToProject: true);
-            customBuild.AddSetting("Command", args.ToString(' '), condition: config.ConditionText);
-            customBuild.AddSetting("Message", System.String.Format("Assembling {0}", System.IO.Path.GetFileName(sender.InputPath.Parse())), condition: config.ConditionText);
-            customBuild.AddSetting("Outputs", output, condition: config.ConditionText);
-            sender.MetaData = customBuild;
+            var assemblerGroup = config.GetSettingsGroup(VSSolutionBuilder.VSSettingsGroup.ESettingsGroup.Assembler, include: sender.InputPath, uniqueToProject: true);
+            sender.MetaData = assemblerGroup;
         }
     }
 }
